# pdfitdown-app

./: CONTRIBUTING.md  README.md
.github/workflows/: docker-image.yml  lint.yml  test.yml  typecheck.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
backend/src/backend/: api.py  auth.py  exporter.py  limiter.py
backend/tests/: conftest.py  test_api.py
frontend/: .cta.json  README.md  package.json  pnpm-lock.yaml  wrangler.jsonc
frontend/public/: manifest.json
frontend/src/: styles.css
frontend/src/components/: Footer.tsx  Header.tsx  workos-user.tsx
frontend/src/routes/: __root.tsx  index.tsx
