[build-system]
requires = ["uv_build>=0.11.23,<0.12"]
build-backend = "uv_build"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "axiom-py>=0.12.0",
    "fastapi>=0.137.2",
    "fastapi-limiter>=0.1.6,<0.2.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-exporter-otlp>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pdfitdown>=3.0.0",
    "pyjwt[crypto]>=2.13.0",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
serve = "backend.api:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
